--- a/wgscovplot/tmpl/wgscovplot.html
+++ b/wgscovplot/tmpl/wgscovplot.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>WGSCOVPLOT</title>
     <script type="text/javascript">
-        {%if dev == false %}
-        {%include "js/wgscovplot.prod.bundle.js" %}
+        {% if dev == false %}
+        {% include "js/wgscovplot.prod.bundle.js" %}
         {% else %}
-        {%include "js/wgscovplot.dev.bundle.js" %}
-        {%endif %}
+        {% include "js/wgscovplot.dev.bundle.js" %}
+        {% endif %}
     </script>
     <style>
         #nav-tabContent {
@@ -100,6 +100,7 @@
 
 <script>
     const db = {{db | tojson}};
+    console.log(db)
     window.db = db;
     document.addEventListener("DOMContentLoaded", function (event) {
         const $chart = document.getElementById("chart");
